# mcp-memory-server

./: .gitignore  Cargo.toml  README.md  ROADMAP_WAVES_6_10.md  effective_work.md  large_scale_bench.sh  mcp-init.sh  setup_service.sh  stress_test.py  stress_test.sh
artifacts/: final_comprehensive_review.md  final_release_review.md  wave12.md  wave12_review.md  wave13.md  wave13_review.md
docs/: AGENT_GUIDELINES.md  UPGRADE_PLAN_v2.md  USER_GUIDE.md
src/: dispatcher.rs  graph.rs  main.rs  models.rs  protocol.rs  registry.rs  session.rs  storage.rs
tests/: durability_concurrency_test.rs  integration_test.rs  rpc_resources_test.rs  security_protocol_test.rs  session_lifecycle_test.rs
tests/common/: mod.rs
