[package]
name = "mcp-memory-server-rust"
version = "1.1.5"
edition = "2021"
authors = ["Senior Staff Rust Engineer"]
description = "High-performance MCP Memory Server implementation in Rust"

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
uuid = { version = "1.13", features = ["v4"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# Concurrent storage
dashmap = "6.1"

# CLI & Configuration
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"

# Async support for traits
async-trait = "0.1"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
